syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.alibaba.csp.sentinel.adapter.grpc.gen";
option java_outer_classname = "FooProto";

package com.alibaba.sentinel.examples;

message FooRequest {
    string name = 1;
    int32 id = 2;
}

message FooResponse {
    string message = 1;
}

// Example service definition.
service FooService {
    rpc sayHello(FooRequest) returns (FooResponse) {}
    rpc anotherHello(FooRequest) returns (FooResponse) {}
}
